# global_footprint_network_use_case

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  README.txt  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci-cd.yml
bonus_exercise/: weekly_returns_duckdb.ipynb
docs/: ARCHITECTURE.md  SNOWPIPE_SETUP.md
docs/adr/: 001-use-dlt-for-data-loading.md  002-s3-as-staging-layer.md  003-async-extraction-pattern.md  004-soda-for-data-quality.md  README.md
infrastructure/: __init__.py  lambda_handlers.py  load_to_snowflake.py  setup_localstack.py  setup_snowflake_production.py
infrastructure/aws/: snowpipe_iam_role.json
infrastructure/snowflake/: 01_setup_storage.sql  02_snowpipe.sql  03_monitoring.sql  04_localstack_integration.sql
scripts/: setup_localstack.sh
soda/: checks.yml  configuration.yml  staging_checks.yml
src/gfn_pipeline/: README.md  __init__.py  client_gfn.py  config.py  load_duckdb.py  load_snowflake.py  main.py  pipeline.py  pipeline_async.py  storage.py  transform.py  validators.py
tests/: __init__.py  test_pipeline.py
