[project]
name = "gfn-pipeline"
version = "0.1.0"
description = "Global Footprint Network carbon footprint ingestion pipeline (local + AWS + Snowflake)"
requires-python = ">=3.10"
dependencies = [
  "requests>=2.31.0",
  "pandas>=2.1.0",
  "pyarrow>=14.0.0",
  "duckdb>=1.0.0,<1.2.0",
  "boto3>=1.34.0",
  "tenacity>=8.2.3",
  "python-dotenv>=1.0.1",
  "snowflake-connector-python[pandas]>=3.6.0",
  "dlt[duckdb,filesystem,snowflake]>=1.0.0",
  "aiohttp>=3.9.0",
  "orjson>=3.9.0",
  "fastapi>=0.104.0",
  "uvicorn[standard]>=0.24.0",
  "pydantic>=2.5.0",
  "pydantic-settings>=2.1.0",
  "pyyaml>=6.0.0",
  "soda-core-snowflake>=3.0.0",
  "awscli-local>=0.22",
]

[tool.uv]
# uv will manage the isolated environment from this project metadata.

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.14",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = [
  "pytest>=7.4.0",
  "pytest-asyncio>=0.21.0",
  "pytest-cov>=4.1.0",
  "ruff>=0.1.0",
  "httpx>=0.25.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
markers = [
    "integration: marks tests as integration tests (require LocalStack)",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]
